# server/modules/lending-records.js
@@ -1,0 +1,32 @@
+const mongoose = require('mongoose');
+
+const lendingRecordSchema = new mongoose.Schema({
+  member: {
+    type: mongoose.Schema.Types.ObjectId,
+    ref: 'Member',
+    required: true
+  },
+  book: {
+    type: mongoose.Schema.Types.ObjectId,
+    ref: 'Book',  
+    required: true
+  },
+  borrowDate: {
+    type: Date,
+    default: Date.now
+  },
+  dueDate: {
+    type: Date,
+    required: true
+  },
+  returnDate: {
+    type: Date
+  },
+  status: {
+    type: String,
+    enum: ['borrowed', 'returned', 'overdue'],
+    default: 'borrowed'
+  }
+});
+
+module.exports = mongoose.model('LendingRecord', lendingRecordSchema);
